# C8550-YOLOv10-det-on-8550DK

./: README.md
8550-YOLOv10-det/: CMakeLists.txt  SNPETask.cpp  YOLOv10s.cpp  YOLOv10s.h  main.cpp
doc/: C8550 YOLOv10 det on 8550DK.docx
